feat: add main sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import DefaultLayout from "../layouts/Default.astro";
+import { HeaderSection } from "../sections/Header";
+import { HeroSection } from "../sections/Hero";
+import { FeaturesCardsSection } from "../sections/FeaturesCards";
 ---
 
 <DefaultLayout>
-  <h1>Hello world</h1>
+  <HeaderSection />
+  <HeroSection />
+  <FeaturesCardsSection />
 </DefaultLayout>
