--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import { FeaturesCardsSection } from "../sections/FeaturesCards";
 import { FeaturesGridSection } from "../sections/FeaturesGrid";
 import { LatestPosts } from "../sections/LatestPosts";
 import { getCollection } from "astro:content";
+import { TestimonialsSection } from "../sections/Testimonials";
+import { CallToAction } from "../sections/CallToAction";
 
 const posts = await getCollection("blog");
 const latestPosts = posts
@@ -24,4 +26,6 @@ const latestPosts = posts
   <FeaturesCardsSection />
   <FeaturesGridSection />
   <LatestPosts posts={latestPosts} />
+  <TestimonialsSection />
+  <CallToAction />
 </DefaultLayout>
