--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const latestPosts = posts
 <DefaultLayout>
   <HeaderSection />
   <HeroSection client:load />
-  <FeaturesCardsSection />
+  <FeaturesCardsSection client:load />
   <FeaturesGridSection />
   <LatestPosts posts={latestPosts} />
   <TestimonialsSection />
