--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const latestPosts = posts
   <HeaderSection />
   <HeroSection client:load />
   <FeaturesCardsSection client:load />
-  <FeaturesGridSection />
+  <FeaturesGridSection client:load />
   <LatestPosts posts={latestPosts} />
   <TestimonialsSection />
   <CallToAction />
