--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const latestPosts = posts
   <HeroSection client:load />
   <FeaturesCardsSection client:load />
   <FeaturesGridSection client:load />
-  <LatestPosts posts={latestPosts} />
+  <LatestPosts client:load posts={latestPosts} />
   <TestimonialsSection />
   <CallToAction />
   <Footer />
