feat: animate call to action

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const latestPosts = posts
   <FeaturesCardsSection client:load />
   <FeaturesGridSection client:load />
   <LatestPosts client:load posts={latestPosts} />
-  <TestimonialsSection />
-  <CallToAction />
+  <TestimonialsSection client:load />
+  <CallToAction client:load />
   <Footer />
 </DefaultLayout>
