feat: add nav menu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const latestPosts = posts
 ---
 
 <DefaultLayout>
-  <HeaderSection />
+  <HeaderSection client:load />
   <HeroSection client:load />
   <FeaturesCardsSection client:load />
   <FeaturesGridSection client:load />
