--- a/src/components/InteriorHero.astro
+++ b/src/components/InteriorHero.astro
@@ -7,7 +7,7 @@ import { Hexagon } from './Hexagon'
     <Hexagon size={800} client:load duration={30} />
   </div>
   <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
-    <Hexagon size={1200} client:load duration={50} reverse />
+    <Hexagon size={1200} client:load duration={50} reverse={false} />
   </div>
   <div class="container">
     <slot />
